Se remueven las dependecias al sotrage del modulo de administracion

--- a/tecolotl-web/src/main/webapp/administracion/actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/actividad.xhtml
@@ -58,6 +58,6 @@
         </div>
     </ui:define>
     <ui:define name="file-js">
-        <h:outputScript library="js" name="administracion/actividad.js"/>
+        <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/administracion/actividad.js"></script>
     </ui:define>
 </ui:composition>
