--- a/tecolotl-web/src/main/webapp/administracion/alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/alumnos.xhtml
@@ -70,7 +70,7 @@
                                     <tr>
                                         <td colspan="2">
                                             <div class="uk-flex uk-flex-center">
-                                                <h:graphicImage library="img" name="vacio.svg" height="215" width="243" alt="vacio"/>
+                                                <h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/vacio.svg" height="215" width="243" alt="vacio"/>
                                             </div>
                                         </td>
                                     </tr>
@@ -107,6 +107,6 @@
         </h:form>
     </ui:define>
     <ui:define name="file-js">
-        <h:outputScript library="js" name="/administracion/filtrado-alumnos-bloqueo.js"/>
+        <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/administracion/filtrado-alumnos-bloqueo.js"></script>
     </ui:define>
 </ui:composition>
