--- a/tecolotl-web/src/main/webapp/administracion/coordinador.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/coordinador.xhtml
@@ -87,7 +87,7 @@
                                         <tr>
                                             <td colspan="6">
                                                 <div class="uk-flex uk-flex-center">
-                                                    <h:graphicImage library="img" name="vacio.svg" height="215" width="243" alt="vacio"/>
+                                                    <h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/vacio.svg" height="215" width="243" alt="vacio"/>
                                                 </div>
                                             </td>
                                         </tr>
@@ -262,7 +262,7 @@
                                 <div class="uk-inline">
                                     <h:commandLink styleClass="uk-form-icon uk-form-icon-flip">
                                         <f:ajax/>
-                                        <h:graphicImage library="img" name="icono/ojo.svg" styleClass="uk-icon-image" pt:uk-icon="" onclick="cambiareditar()"/>
+                                        <h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/ojo.svg" styleClass="uk-icon-image" pt:uk-icon="" onclick="cambiareditar()"/>
                                     </h:commandLink>
                                     <h:inputSecret styleClass="uk-input"
                                                    id="input-secret-editar-password"
@@ -344,7 +344,7 @@
                 <ui:repeat value="#{coordinadorControlador.coordinadorModeloLista}" var="coordinadorModelo">
                     <div class="tablero-licencia">
                         <div class="imagen">
-                            <h:graphicImage styleClass="uk-display-inline-block" library="img" name="/avatar/maestro.svg"   width="60"/>
+                            <h:graphicImage styleClass="uk-display-inline-block" url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/avatar/maestro.svg" width="60"/>
                         </div>
                         <div class="informacion">
                             <h6>Coordinator</h6>
@@ -368,13 +368,8 @@
                 <button class="uk-button uk-button-primary" onclick="generatePdf()" type="button">#{otrosboton['download.PDF']}</button>
             </div>
         </h:panelGroup>
-
-        <h:outputScript library="js" name="html2pdf.bundle.min.js"/>
-        <h:outputScript library="js" name="/administracion/coordinador.js"/>
-        <ui:remove>
         <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/html2pdf.bundle.min.js"></script>
         <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/administracion/coordinador.js"></script>
-        </ui:remove>
         <script type="text/javascript">
             var contrassenia;
             var contrasseniaeditar;
