--- a/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
@@ -37,6 +37,7 @@
                         <div class="uk-grid uk-grid-small">
                             <div class="uk-width-1-3"><h4 class="uk-text-capitalize"><span class="uk-text-middle">#{otrosetiqueta['teachers']}</span></h4></div>
                             <div class="uk-width-expand uk-text-right panel-icons">
+<!--
                                 <h:form>
                                     <h:commandLink styleClass="uk-icon-link uk-text-primary"
                                                    pt:uk-toggle="target: #modal-profesor"
@@ -44,7 +45,10 @@
                                                    pt:uk-icon="icon: plus-circle; ratio: 1.5">
                                         <f:ajax listener="#{administracionProfesorControlador.limpiaModelo()}" render="formulario-modal-profesor"/>
                                     </h:commandLink>
-                                </h:form>
+                                </h:form> -->
+                                <h:button styleClass="uk-button uk-button-primary" value="${otrosboton['add']}" outcome="agregar">
+                                    <f:param name="escuela" value="#{administracionProfesorControlador.escuelaBaseModelo.claveCentroTrabajo}"/>
+                                </h:button>
                             </div>
                         </div>
                     </div>
@@ -153,7 +157,7 @@
             </div>
         </div>
         <div class="uk-flex uk-flex-right uk-margin-top">
-            <h:panelGroup id="boton-password" class="uk-button uk-margin-small-right #{not empty administracionProfesorControlador.profesorModeloLista ? 'uk-button-primary' : 'visibilidad'}" pt:uk-toggle="target: #modal-password">#{otrosboton['passwords']}</h:panelGroup>
+            <h:panelGroup id="boton-password" layout="block" class="uk-button uk-margin-small-right #{not empty administracionProfesorControlador.profesorModeloLista ? 'uk-button-primary' : 'visibilidad'}" pt:uk-toggle="target: #modal-password">#{otrosboton['passwords']}</h:panelGroup>
             <h:button styleClass="uk-button uk-button-primary" value="#{otrosboton['back']}" outcome="regresar"/>
         </div>
         <h:panelGroup layout="block" id="modal-profesor" styleClass="uk-modal-container" pt:uk-modal="">
@@ -266,14 +270,14 @@
                         <h:commandButton value="${otrosboton['add']}" onclick="cargaContrasenia()" styleClass="uk-button uk-button-secondary" rendered="#{empty administracionProfesorControlador.profesorModelo.id}" id="boton-agregar">
                             <f:ajax execute="@form"
                                     listener="#{administracionProfesorControlador.inserta()}"
-                                    render="@form formulario-tabla modal-password boton-password"
-                                    onevent="function funcion(data) { cerrarModal(data, 'modalProfresor',1); }"/>
+                                    render="@form formulario-tabla modal-password"
+                                    onevent="function funcion(data) { cerrarModal(data, 'modalProfresor', 1); }"/>
                         </h:commandButton>
                         <h:commandButton value="${otrosboton['update']}" onclick="cargaContrasenia()" styleClass="uk-button uk-button-secondary" rendered="#{not empty administracionProfesorControlador.profesorModelo.id}" id="boton-actualizar">
                             <f:ajax execute="@form"
                                     listener="#{administracionProfesorControlador.actualiza()}"
                                     render="@form formulario-tabla modal-password"
-                                    onevent="function funcion(data) { cerrarModal(data, 'modalProfresor',1);  }"/>
+                                    onevent="function funcion(data) { cerrarModal(data, 'modalProfresor', 1);  }"/>
                         </h:commandButton>
                     </div>
                 </h:form>
@@ -344,9 +348,10 @@
                 </div>
         </h:panelGroup>
         <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/html2pdf.bundle.min.js"></script>
-        <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/administracion/profesores.js"></script>
-<!--        <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/tabla-profesor.js"></script>-->
-        <h:outputScript library="js" name="tabla-profesor.js"/>
+<!--        <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/administracion/profesores.js"></script>-->
+        <h:outputScript library="js" name="profesores.js"/>
+        <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/tabla-profesor.js"></script>
+<!--        <h:outputScript library="js" name="tabla-profesor.js"/>-->
     </ui:define>
 
 </ui:composition>
