--- a/tecolotl-web/src/main/webapp/administracion/agregar.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/agregar.xhtml
@@ -11,17 +11,37 @@
         <f:viewAction action="#{agregarControlador.inicio}"/>
     </f:metadata>
     <ui:define name="contenido">
+        <style>
+            .password{
+                display: grid;
+                grid-template-columns: repeat(7,40px);
+                grid-gap: 20px;
+                justify-content: center;
+
+            }
+            .password img{
+                transition: transform 0.3s linear;
+            }
+            .password img:hover{
+                cursor: pointer;
+            }
+            .selected-img{
+                transform: scale(1.3);
+            }
+
+        </style>
+
         <div uk-grid="">
             <div class="uk-width-1-1">
                 <div class="uk-card uk-card-default uk-card-small uk-card-hover">
                     <h:form id="formulario-agregar">
                         <div class="uk-card-header">
-                            Nuevo Profesor
+                           <h4>Nuevo Profesor</h4>
                         </div>
                         <div class="uk-card-body">
                             <div uk-grid="">
                                 <div class="uk-width-1-1@s uk-width-1-6@m">
-                                    <h:outputLabel value="apodo" for="apodo"/>
+                                    <h:outputLabel styleClass="uk-text-capitalize" value="apodo" for="apodo"/>
                                     <div class="uk-form-controls">
                                         <h:inputText id="apodo"
                                                      class="uk-input"
@@ -35,7 +55,7 @@
                                     <h:message for="apodo" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                                 </div>
                                 <div class="uk-width-1-1@s uk-width-1-4@m">
-                                    <h:outputLabel value="nombre" for="nombre"/>
+                                    <h:outputLabel styleClass="uk-text-capitalize" value="nombre" for="nombre"/>
                                     <div class="uk-form-controls">
                                         <h:inputText id="nombre"
                                                      class="uk-input"
@@ -47,7 +67,7 @@
                                     <h:message for="nombre" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                                 </div>
                                 <div class="uk-width-1-1@s uk-width-1-4@m">
-                                    <h:outputLabel value="apellido paterno" for="apellidoPaterno"/>
+                                    <h:outputLabel styleClass="uk-text-capitalize" value="apellido paterno" for="apellidoPaterno"/>
                                     <div class="uk-form-controls">
                                         <h:inputText id="apellidoPaterno"
                                                      class="uk-input"
@@ -59,7 +79,7 @@
                                     <h:message for="apellidoPaterno" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                                 </div>
                                 <div class="uk-width-1-1@s uk-width-1-4@m">
-                                    <h:outputLabel value="apellido materno" for="apellidoMaterno"/>
+                                    <h:outputLabel styleClass="uk-text-capitalize" value="apellido materno" for="apellidoMaterno"/>
                                     <div class="uk-form-controls">
                                         <h:inputText id="apellidoMaterno"
                                                      class="uk-input"
@@ -71,7 +91,7 @@
                                     <h:message for="apellidoMaterno" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                                 </div>
                                 <div class="uk-width-1-1@s uk-width-1-6@m">
-                                    <h:outputLabel value="sexo" for="sexo"/>
+                                    <h:outputLabel styleClass="uk-text-capitalize" value="sexo" for="sexo"/>
                                     <div class="uk-form-controls">
                                         <h:selectOneMenu class="uk-select"
                                                          id="sexo"
@@ -83,8 +103,8 @@
                                     <h:message for="sexo" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                                 </div>
                                 <div class="uk-width-1-1@s uk-width-1-3@m">
-                                    <h:outputLabel value="correo eletronico" for="correoEletronico"/>
-                                    <div class="uk-form-controls">
+                                    <h:outputLabel styleClass="uk-text-capitalize" value="correo eletronico" for="correoEletronico"/>
+                                    <div class="uk-form-controls" >
                                         <h:inputText id="correoEletronico"
                                                      styleClass="uk-input"
                                                      value="#{agregarControlador.profesorModelo.correoEletronico}">
@@ -95,9 +115,11 @@
                                     <h:message for="correoEletronico" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                                 </div>
                                 <div class="uk-width-1-1@m login">
-                                    <c:forEach begin="1" end="28" var="indice">
-                                        <h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/iconos-login/${indice}.svg" />
-                                    </c:forEach>
+                                    <div id="password-login" class="password" >
+                                        <c:forEach begin="1" end="28" var="indice">
+                                            <h:graphicImage pt:data-number="${indice-1}" url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/iconos-login/${indice}.svg" />
+                                        </c:forEach>
+                                    </div>
                                     <h:inputHidden id="input-secret-password"
                                                    value="#{agregarControlador.profesorModelo.contrasenia}">
                                         <f:validateRequired/>
@@ -111,12 +133,29 @@
                         </div>
                         <div class="uk-card-footer uk-flex uk-flex-right">
                             <h:button styleClass="uk-button uk-button-primary uk-margin-small-right" value="regresar" outcome="regresar"/>
-                            <h:commandButton styleClass="uk-button uk-button-primary" action="#{agregarControlador.agregar}" value="agregar"/>
+                            <h:commandButton styleClass="uk-button uk-button-primary"  action="#{agregarControlador.agregar}" value="agregar"/>
                         </div>
                     </h:form>
                 </div>
             </div>
         </div>
+    </ui:define>
+    <ui:define name="file-js">
+        <script type="text/javascript">
+            let contentImgLogin = document.getElementById('password-login');
+            contentImgLogin.addEventListener('click',(evt)=>{
+                let element = evt.target;
+                if (element.nodeName === "IMG"){
+                    element.classList.toggle('selected-img');
+                }
+            });
+            //funcion para agregar las contraseñas
+            function loadPassword() {
+                let imagesLogin = Array.from(contentImgLogin.querySelectorAll("img")).filter(image => image.classList.contains('selected-img')).map(image => image.dataset.number);
+                //Parte que agrega las contraseñas al input-secret
+                document.getElementById('formulario-agregar:input-secret-password').value = imagesLogin.length === 0 ? null : imagesLogin.join(',');
+            }
+        </script>
     </ui:define>
 
 </ui:composition>
